Fix modules and add build task